--- a/web/templates/head.html
+++ b/web/templates/head.html
@@ -4,6 +4,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;family=Inter:wght@400;500;600&amp;display=swap" rel="stylesheet" />
 <link href="/static/css/font-awesome.6.4.0.min.css" rel="stylesheet"/>
 <link href="/static/css/tailwind-custom.css" rel="stylesheet"/>
+<link href="/static/css/skazanull.css" rel="stylesheet"/>
 <script src="/static/js/tailwind.3.4.5.es"></script>
 <script src="/static/js/tailwind-config.min.js" data-color="#000000" data-border-radius="small"></script>
 <script src="/static/js/jquery-3.6.0.min.js"></script>
