init(web): add settings page

--- a/web/templates/quotes.html
+++ b/web/templates/quotes.html
@@ -50,6 +50,7 @@
 			<div id="pages-next" class="hidden px-3 py-1 border rounded-lg hover:bg-gray-50">...</div>
 			<button id="btn-page-last" class="hidden px-3 py-1 border rounded-lg hover:bg-gray-50">10</button>
 		</div>
+        <a href="/settings" class="block fas fa-gear text-gray-800" style="text-align: center;"> Настройки</a>
 		<div class="text-center mt-8">
 			<p class="text-xs text-gray-500 font-[&#39;Inter&#39;]">
 				<i class="fas fa-quote-right text-custom mr-1"></i>
