--- a/web/templates/head.html
+++ b/web/templates/head.html
@@ -1,6 +1,23 @@
 {{ define "head" }}
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="apple-touch-icon" sizes="57x57" href="/static/images/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/static/images/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/static/images/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/static/images/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/static/images/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/static/images/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/static/images/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/static/images/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/static/images/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/static/images/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
+<link rel="manifest" href="/skazanull.webmanifest">
+<meta name="msapplication-TileColor" content="#8B6D5C">
+<meta name="msapplication-TileImage" content="/static/images/ms-icon-144x144.png">
+<meta name="theme-color" content="#8B6D5C">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;family=Inter:wght@400;500;600&amp;display=swap" rel="stylesheet" />
 <link href="/static/css/font-awesome.6.4.0.min.css" rel="stylesheet"/>
 <link href="/static/css/tailwind-custom.css" rel="stylesheet"/>
