--- a/web/static/css/skazanull.css
+++ b/web/static/css/skazanull.css
@@ -3,3 +3,12 @@
     margin: 0 auto;
     max-width: 20%;
 }
+
+.quote-form {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #0008;
+}
