--- a/web/templates/quotes.html
+++ b/web/templates/quotes.html
@@ -102,6 +102,7 @@
 			</div>
 		</div>
 	</div>
+	<script src="/static/js/utils.js"></script>
 	<script src="/static/js/quotes.js"></script>
 </body>
 
