--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -94,6 +94,7 @@
             </p>
         </div>
     </div>
+	<script src="/static/js/utils.js"></script>
 	<script src="/static/js/settings.js"></script>
 </body>
 
