--- a/web/static/css/skazanull.css
+++ b/web/static/css/skazanull.css
@@ -8,7 +8,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    bottom: 0;
     left: 0;
+    height: 100vh;
     background-color: #0008;
 }
