perf(web): host google fonts locally

--- a/web/embed/templates/head.html
+++ b/web/embed/templates/head.html
@@ -18,7 +18,7 @@
 <meta name="msapplication-TileColor" content="#8B6D5C">
 <meta name="msapplication-TileImage" content="/static/images/ms-icon-144x144.png">
 <meta name="theme-color" content="#8B6D5C">
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;family=Inter:wght@400;500;600&amp;display=swap" rel="stylesheet" />
+<link href="/static/css/google-fonts.css" rel="stylesheet" />
 <link href="/static/css/font-awesome.6.4.0.min.css" rel="stylesheet"/>
 <link href="/static/css/tailwind-custom.css" rel="stylesheet"/>
 <link href="/static/css/skazanull.css" rel="stylesheet"/>
